# loggerlib

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: loggerlibConfig.cmake.in
src/: clogger.cpp  clogger.h  cloggerbase.cpp  cloggerbase.h  clogpriority.cpp  clogpriority.h  clogstring.cpp  clogstring.h
src/tools/: tools_fs.cpp  tools_fs.h  tools_string.cpp  tools_string.h
test/: lltest.cpp  lltest.h  main.cpp  main.h
